[project]
name = "fea-contour-plotter"
version = "1.3.0"
description = "FEA 2D Contour Plot Generator — Midas Civil Post-Processing Tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "FEA Automation"},
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "tqdm>=4.65",
]

[project.scripts]
fea-plot = "fea_contour.cli_plot:entry_point"
fea-report = "fea_contour.cli_report:entry_point"
fea-rebar = "fea_contour.cli_rebar:entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fea_contour"]
